<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMOV BUS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="cctype">CC Type</string>
    <string name="ccnumber">CC Number</string>
    <string name="ccdate">CC Date</string>
    <string name="register">Register</string>
    <string name="title_activity_main_inspector">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_val_terminal">MainValTerminalActivity</string>
    <string name="title_activity_inspector_get_tickets">InspectorGetTicketsActivity</string>
    <string name="title_activity_inspector_present_tickets">InspectorPresentTicketsActivity</string>
    <string name="comprar">Buy</string>
    <string name="meusBilhetes">My Tickets</string>
    <string name="last">Last</string>
    <string name="history">History</string>
    <string name="title_activity_buy">Buy</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="title_activity_check_buy">CheckBuy</string>
    <string name="bilhetes">Tickets</string>
    <string name="confirma">Confirm</string>
    <string name="title_activity_final">Final</string>
    <string name="title_activity_tt">TT</string>
    <string name="Sucesso">Success</string>
    <string name="Casa">Home</string>
    <string name="title_activity_my_tickets">MyTickets</string>
    <string name="title_activity_login">User Login</string>
    <string name="title_activity_register">Register User</string>

</resources>