<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dip">
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:singleLine="true"
	        android:text="@string/username" />
	
	    <EditText
	        android:id="@+id/regUsername"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="text" >
	        <requestFocus />
	    </EditText>
	
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:text="@string/password" />
	
	    <EditText
	        android:id="@+id/regPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="20dip"
	        android:ems="10"
	        android:inputType="textPassword"
	        android:singleLine="true" >
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:text="@string/name" />
	
	    <EditText
	        android:id="@+id/regName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="text"
	        android:ems="10" >
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:text="@string/email" />
	
	    <EditText
	        android:id="@+id/regEmail"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="textEmailAddress"
	        android:ems="10" >
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:text="@string/cctype" />
	
	    <EditText
	        android:id="@+id/regCCType"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="text"
	        android:ems="10" >
	
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:text="@string/ccnumber" />
	
	    <EditText
	        android:id="@+id/regCCNumber"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="number"
	        android:ems="10" >
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="5dip"
	        android:text="@string/ccdate" />
	
	    <EditText
	        android:id="@+id/regCCDate"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dip"
	        android:inputType="date"
	        android:ems="10" >
	        <requestFocus />
	    </EditText>
	
	    <Button
	        android:id="@+id/btnRegister"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/register" />
	
	</LinearLayout>
</ScrollView>